bin/testsuite/tests/compiler/src/errors/compiler166.swg
#global testerror "assertion failed"

using Swag

#run
{
    @assert(1 == 2)
}
